--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
